hphp/hack/test/typecheck/class_prop_as_this.php.like_types.exp
File "class_prop_as_this.php", line 12, characters 5-23:
  ~this as C
File "class_prop_as_this.php", line 13, characters 5-21:
  ~this as C
File "class_prop_as_this.php", line 17, characters 5-19:
Invalid assignment (Typing[4110])
File "class_prop_as_this.php", line 7, characters 38-41:
Expected ~<expr#1> because it is an unenforceable type
File "class_prop_as_this.php", line 9, characters 31-31:
But got <expr#2>
File "class_prop_as_this.php", line 17, characters 14-16:
  where '<expr#2>' is a reference to this expression
